# Hermes

./: Cargo.toml  README.md  diesel.toml
migrations/2024-08-30-002059_init/: down.sql  up.sql
src/: args.rs  autocomplete.rs  main.rs  models.rs  schema.rs
src/handlers/: clients.rs  invoices.rs  mod.rs  print.rs  settings.rs  utils.rs
