[package]
name = "hermes"
version = "0.3.0"
authors = ["Jordan Robinson <hello.world@jordanrobo.xyz>"]
edition = "2021"
description = "A simple command line interface application to manage and print invoices for my clients"
license = "MIT"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
clap = { version = "4.5.16", features = ["derive"] }
inquire = "0.7.5"
comfy-table = "7.1.1"
anyhow = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
once_cell = "1.17.1"
chrono = { version = "0.4.22", features = ["serde"] }
shellexpand = "2.1"
dirs = "5.0"
